--- a/data_show.ipynb
+++ b/data_show.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:25.429901Z",
-     "start_time": "2024-12-22T17:39:25.391532Z"
+     "end_time": "2024-12-22T19:16:19.731418Z",
+     "start_time": "2024-12-22T19:16:19.694209Z"
     }
    },
    "source": [
@@ -144,18 +144,18 @@
        "</div>"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 288
+   "execution_count": 351
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:25.438927Z",
-     "start_time": "2024-12-22T17:39:25.430907Z"
+     "end_time": "2024-12-22T19:16:19.741589Z",
+     "start_time": "2024-12-22T19:16:19.733424Z"
     }
    },
    "cell_type": "code",
@@ -284,18 +284,18 @@
        "</div>"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 289
+   "execution_count": 352
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.019924Z",
-     "start_time": "2024-12-22T17:39:25.439991Z"
+     "end_time": "2024-12-22T19:16:20.406174Z",
+     "start_time": "2024-12-22T19:16:19.760174Z"
     }
    },
    "cell_type": "code",
@@ -341,13 +341,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 290
+   "execution_count": 353
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.053444Z",
-     "start_time": "2024-12-22T17:39:26.019924Z"
+     "end_time": "2024-12-22T19:16:20.441818Z",
+     "start_time": "2024-12-22T19:16:20.407187Z"
     }
    },
    "cell_type": "code",
@@ -381,15 +381,15 @@
     "data['数学线'] = pd.to_numeric(data['数学线'], errors='coerce')\n",
     "data['专业线'] = pd.to_numeric(data['专业线'], errors='coerce')\n",
     "\n",
-    "# 6. 处理异常值（根据具体情况，你可以选择不同的处理方法）\n",
-    "# 例如，如果 \"国家线\" 小于0或者大于100，则可能是异常值\n",
+    "# 5. 处理异常值（根据具体情况，你可以选择不同的处理方法）\n",
+    "# 例如，如果 \"国家线\" 小于0或者大于400，则可能是异常值\n",
     "data = data[data['国家线'].between(0, 400)]  # 删除 \"国家线\" 超过 0 到 100 范围的异常值\n",
     "\n",
-    "# 7. 统一列名（去除多余的空格和特殊字符）\n",
+    "# 6. 统一列名（去除多余的空格和特殊字符）\n",
     "data.columns = data.columns.str.strip()  # 去除列名中的前后空格\n",
     "data.columns = data.columns.str.replace(' ', '_')  # 用下划线替换空格\n",
     "\n",
-    "# 9. 查看清理后的数据\n",
+    "# 7. 查看清理后的数据\n",
     "data.head()  # 查看清理后的前几行数据\n"
    ],
    "id": "b910f923ab30b984",
@@ -523,18 +523,18 @@
        "</div>"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 291
+   "execution_count": 354
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.069152Z",
-     "start_time": "2024-12-22T17:39:26.054448Z"
+     "end_time": "2024-12-22T19:16:20.458854Z",
+     "start_time": "2024-12-22T19:16:20.442825Z"
     }
    },
    "cell_type": "code",
@@ -557,26 +557,19 @@
     "data_pca = pd.DataFrame(reduced_data, columns=['PCA'])\n",
     "data = pd.concat([data, data_pca], axis=1)\n",
     "\n",
-    "data.head()\n"
+    "data[['代码', '专业', '类型','学校','国家线','PCA']].head()\n"
    ],
    "id": "611303d298b3c2a2",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       年份      代码       专业     类型      学校    国家线   英语线   政治线   数学线   专业线  \\\n",
-       "0  2023.0  125200     公共管理  专业型硕士  上海海洋大学  175.0  44.0   0.0  88.0   0.0   \n",
-       "1  2023.0  095137     农业管理  专业型硕士  上海海洋大学  251.0  33.0  33.0  50.0  50.0   \n",
-       "2  2023.0  095135  食品加工与安全  专业型硕士  上海海洋大学  251.0  33.0  33.0  50.0  50.0   \n",
-       "3  2023.0  095134     渔业发展  专业型硕士  上海海洋大学  251.0  33.0  33.0  50.0  50.0   \n",
-       "4  2023.0  086000    生物与医药  专业型硕士  上海海洋大学  273.0  38.0  38.0  57.0  57.0   \n",
-       "\n",
-       "        PCA  \n",
-       "0 -2.686874  \n",
-       "1 -1.157919  \n",
-       "2 -1.157919  \n",
-       "3 -1.157919  \n",
-       "4 -0.381299  "
+       "       代码       专业     类型      学校    国家线       PCA\n",
+       "0  125200     公共管理  专业型硕士  上海海洋大学  175.0 -2.686874\n",
+       "1  095137     农业管理  专业型硕士  上海海洋大学  251.0 -1.157919\n",
+       "2  095135  食品加工与安全  专业型硕士  上海海洋大学  251.0 -1.157919\n",
+       "3  095134     渔业发展  专业型硕士  上海海洋大学  251.0 -1.157919\n",
+       "4  086000    生物与医药  专业型硕士  上海海洋大学  273.0 -0.381299"
       ],
       "text/html": [
        "<div>\n",
@@ -597,88 +590,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>年份</th>\n",
        "      <th>代码</th>\n",
        "      <th>专业</th>\n",
        "      <th>类型</th>\n",
        "      <th>学校</th>\n",
        "      <th>国家线</th>\n",
-       "      <th>英语线</th>\n",
-       "      <th>政治线</th>\n",
-       "      <th>数学线</th>\n",
-       "      <th>专业线</th>\n",
        "      <th>PCA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023.0</td>\n",
        "      <td>125200</td>\n",
        "      <td>公共管理</td>\n",
        "      <td>专业型硕士</td>\n",
        "      <td>上海海洋大学</td>\n",
        "      <td>175.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>-2.686874</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023.0</td>\n",
        "      <td>095137</td>\n",
        "      <td>农业管理</td>\n",
        "      <td>专业型硕士</td>\n",
        "      <td>上海海洋大学</td>\n",
        "      <td>251.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>50.0</td>\n",
        "      <td>-1.157919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023.0</td>\n",
        "      <td>095135</td>\n",
        "      <td>食品加工与安全</td>\n",
        "      <td>专业型硕士</td>\n",
        "      <td>上海海洋大学</td>\n",
        "      <td>251.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>50.0</td>\n",
        "      <td>-1.157919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2023.0</td>\n",
        "      <td>095134</td>\n",
        "      <td>渔业发展</td>\n",
        "      <td>专业型硕士</td>\n",
        "      <td>上海海洋大学</td>\n",
        "      <td>251.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>50.0</td>\n",
        "      <td>-1.157919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023.0</td>\n",
        "      <td>086000</td>\n",
        "      <td>生物与医药</td>\n",
        "      <td>专业型硕士</td>\n",
        "      <td>上海海洋大学</td>\n",
        "      <td>273.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>57.0</td>\n",
        "      <td>-0.381299</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -686,18 +649,18 @@
        "</div>"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 292
+   "execution_count": 355
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.237110Z",
-     "start_time": "2024-12-22T17:39:26.069152Z"
+     "end_time": "2024-12-22T19:16:20.649493Z",
+     "start_time": "2024-12-22T19:16:20.459866Z"
     }
    },
    "cell_type": "code",
@@ -740,13 +703,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 293
+   "execution_count": 356
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.260546Z",
-     "start_time": "2024-12-22T17:39:26.238124Z"
+     "end_time": "2024-12-22T19:16:20.677657Z",
+     "start_time": "2024-12-22T19:16:20.649493Z"
     }
    },
    "cell_type": "code",
@@ -803,13 +766,13 @@
      ]
     }
    ],
-   "execution_count": 294
+   "execution_count": 357
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.268071Z",
-     "start_time": "2024-12-22T17:39:26.261551Z"
+     "end_time": "2024-12-22T19:16:20.685475Z",
+     "start_time": "2024-12-22T19:16:20.678662Z"
     }
    },
    "cell_type": "code",
@@ -839,13 +802,13 @@
      ]
     }
    ],
-   "execution_count": 295
+   "execution_count": 358
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.286247Z",
-     "start_time": "2024-12-22T17:39:26.269095Z"
+     "end_time": "2024-12-22T19:16:20.703225Z",
+     "start_time": "2024-12-22T19:16:20.685475Z"
     }
    },
    "cell_type": "code",
@@ -1008,18 +971,18 @@
        "</div>"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 296
+   "execution_count": 359
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:39:26.365293Z",
-     "start_time": "2024-12-22T17:39:26.287248Z"
+     "end_time": "2024-12-22T19:16:20.783817Z",
+     "start_time": "2024-12-22T19:16:20.703365Z"
     }
    },
    "cell_type": "code",
@@ -1056,13 +1019,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 297
+   "execution_count": 360
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:40:48.751783Z",
-     "start_time": "2024-12-22T17:40:48.624226Z"
+     "end_time": "2024-12-22T19:16:21.444549Z",
+     "start_time": "2024-12-22T19:16:20.783817Z"
     }
    },
    "cell_type": "code",
@@ -1129,13 +1092,13 @@
      ]
     }
    ],
-   "execution_count": 304
+   "execution_count": 361
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-22T17:45:50.051474Z",
-     "start_time": "2024-12-22T17:45:49.875635Z"
+     "end_time": "2024-12-22T19:16:21.624620Z",
+     "start_time": "2024-12-22T19:16:21.445565Z"
     }
    },
    "cell_type": "code",
@@ -1239,15 +1202,20 @@
      ]
     }
    ],
-   "execution_count": 314
+   "execution_count": 362
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T19:16:21.627228Z",
+     "start_time": "2024-12-22T19:16:21.625625Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "dc61c35a89382c6d"
+   "id": "a9b97e78fd9157a",
+   "outputs": [],
+   "execution_count": 362
   }
  ],
  "metadata": {
